--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@
     box-sizing: border-box;
 }
 body{
-    height: 100vh;
-    width: 100%;
     background-color: #0D1A2D;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #card{
+    margin-top: 100px;
     border: 1px solid red;
     height: 520px;
     width: 300px;
@@ -25,4 +24,17 @@ body{
     height: 260px;
     border: 1px solid red;
     border-radius: 5px;
+    overflow: hidden;
+}
+#image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#title{
+    color: white;
+    font-size: 0.6em;
+}
+#description{
+    color: grey;
 }
