--- a/style.css
+++ b/style.css
@@ -38,3 +38,14 @@ body{
 #description{
     color: grey;
 }
+#priceanddate{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid red;
+    width: 100%;
+    height: 25px;
+}
+#price{
+    color: #00FFF8;
+}
