--- a/style.css
+++ b/style.css
@@ -45,11 +45,34 @@ body{
     justify-content: space-between;
     border: 1px solid red;
     width: 100%;
-    height: 25px;
+    height: 30px;
 }
 #price{
     color: #00FFF8;
 }
 #date{
     color: #8BACD9;
+}
+hr{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #8BACD9;
+}
+#creator{
+    width: 100%;
+    height: 30px;
+    border: 1px solid red;
+}
+#profilpicture{
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    border: 2px solid white;
+    overflow: hidden;
+
+}
+#profilpicture img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
