--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+
 *{
     top: 0;
     left: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;}
+    font-family: 'Outfit', sans-serif;
+}
+
 body{
     background-color: #0D1A2D;
     display: flex;
@@ -24,15 +27,25 @@ body{
     height: 260px;
     border-radius: 5px;
     overflow: hidden;
+    background-color: #00FFF8;
+    background-image: url(img/icon-view.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 #image img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+.equi:hover{
+filter: opacity(50%);
+}
 #title{
     color: white;
     font-size: 0.6em;
+}
+#title:hover{
+    color: #00FFF8;
 }
 #description{
     color: #8BACD9;
@@ -59,6 +72,13 @@ hr{
     margin-top: 20px;
     margin-bottom: 20px;
     color: #8BACD9;
+}
+#line{
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px solid #8bacd967;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 #creator{
     width: 100%;
